--- a/templates/page/servicios.html.twig
+++ b/templates/page/servicios.html.twig
@@ -5,67 +5,51 @@
 
 <section>
 	<br>
-	<h1>Servicios</h1>
+	<h1 style="font-size: 4em">Servicios</h1>
 	<br>
 	<br>
 	<div class="row justify-content-center" style="text-align: justify; margin-top: 30px; margin: auto;">
 		<div class="col-sm-5 col-md-5 col-lg-3 col-xl-2">
-			<img src="img/thumb.JPG" width="300px" alt="">
+			<img src="img/logoAdmin.png" width="250px" alt="">
 		</div>
 
 		<div class="col-sm-7 col-md-6 col-lg-5 col-xl-4" style="margin-top: 10px;">
-			<h3 style="margin-bottom: 10px;">Servicio 1</h3>
-			Lorem ipsum dolor sit amet
-			consectetur adipisicing elit. Cum dolore delectus nostrum, rerum harum aut sed eius nisi error
-			officia quaerat. Dolores molestiae placeat voluptates vero. Nulla eligendi saepe mollitia.Lorem
-			ipsum dolor sit amet consectetur adipisicing elit. Cum dolore delectus nostrum, rerum harum aut sed
-			eius nisi error officia quaerat.
+			<h3 style="margin-bottom: 10px;">Nuestra identidad</h3>
+Apostamos por la innovación en todos nuestros procesos, la selección de productos exclusivos y de calidad, y el asesoramiento 100% personalizado a través de una amplia red omnicanal. Nuestra prioridad es regalar a cada visitante, sin importar su especie, una experiencia única.
 		</div>
 	</div>
 	<br>
 	<br>
 	<div class="row justify-content-center" style="text-align: justify; margin-top: 30px; margin: auto;">
 		<div class="col-sm-7 col-md-6 col-lg-5 col-xl-4" style="margin-top: 10px;">
-			<h3 style="margin-bottom: 10px;">Servicio 2</h3>
-			Lorem ipsum dolor sit amet
-			consectetur adipisicing elit. Cum dolore delectus nostrum, rerum harum aut sed eius nisi error
-			officia quaerat. Dolores molestiae placeat voluptates vero. Nulla eligendi saepe mollitia.Lorem
-			ipsum dolor sit amet consectetur adipisicing elit. Cum dolore delectus nostrum, rerum harum aut sed
-			eius nisi error officia quaerat.
+			<h3 style="margin-bottom: 10px;">Nuestros servicios</h3>
+Nada sería posible sin el equipo experto, multidisciplinar y en constante evolución que nos convierte en referentes en los campos de experiencia del cliente, asesoramiento especializado, veterinaria, peluquería canina y felina, y educación canina
 		</div>
 		<div class="col-sm-5 col-md-5 col-lg-3 col-xl-2">
-			<img src="img/thumb.JPG" width="300px" alt="">
+			<img src="img/veterinario.JPG" width="300px" alt="">
 		</div>
 	</div>
 	<br>
 	<br>
 	<div class="row justify-content-center" style="text-align: justify; margin-top: 30px; margin: auto;">
 		<div class="col-sm-5 col-md-5 col-lg-3 col-xl-2">
-			<img src="img/thumb.JPG" width="300px" alt="">
+			<img src="img/trabajadores1.JPG" width="300px" alt="">
 		</div>
 
 		<div class="col-sm-7 col-md-6 col-lg-5 col-xl-4" style="margin-top: 10px;">
-			<h3 style="margin-bottom: 10px;">Servicio 3</h3>
-			Lorem ipsum dolor sit amet
-			consectetur adipisicing elit. Cum dolore delectus nostrum, rerum harum aut sed eius nisi error
-			officia quaerat. Dolores molestiae placeat voluptates vero. Nulla eligendi saepe mollitia.Lorem
-			ipsum dolor sit amet consectetur adipisicing elit. Cum dolore delectus nostrum, rerum harum aut sed
-			eius nisi error officia quaerat.
+			<h3 style="margin-bottom: 10px;">Nuestro desarrollo</h3>
+En 2017 comienza nuestro proyecto más ambicioso: llevar la experiencia Yomo a cada rincón del mapa. Actualmente, nuestro plan de expansión nacional continúa en marcha, y contamos con 16 tiendas físicas, un ecommerce líder en el sector y una ambiciosa propuesta de franquiciado para nuevos emprendedores y propietarios.
 		</div>
 	</div>
 	<br>
 	<br>
 	<div class="row justify-content-center" style="text-align: justify; margin-top: 30px; margin: auto;">
 		<div class="col-sm-7 col-md-6 col-lg-5 col-xl-4" style="margin-top: 10px;">
-			<h3 style="margin-bottom: 10px;">Servicio 4</h3>
-			Lorem ipsum dolor sit amet
-			consectetur adipisicing elit. Cum dolore delectus nostrum, rerum harum aut sed eius nisi error
-			officia quaerat. Dolores molestiae placeat voluptates vero. Nulla eligendi saepe mollitia.Lorem
-			ipsum dolor sit amet consectetur adipisicing elit. Cum dolore delectus nostrum, rerum harum aut sed
-			eius nisi error officia quaerat.
+			<h3 style="margin-bottom: 10px;">Nuestro compromiso</h3>
+Garantizar la calidad de vida de los animales en todas sus etapas es nuestra razón de ser. Además de los mejores productos y un servicio de asesoramiento orientado al bienestar de la mascota como prioridad, desarrollamos de manera permanente un programa solidario de colaboración social donde Echamos una pata a los animales desfavorecidos.
 		</div>
 		<div class="col-sm-5 col-md-5 col-lg-3 col-xl-2">
-			<img src="img/thumb.JPG" width="300px" alt="">
+			<img src="img/iggy2.JPG" width="300px" alt="">
 		</div>
 	</div>
 
