--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,7 @@ body {
   font-family: "PT Sans", sans-serif;
   color: #31353d;
   background-color: #eeeff7 !important;
+  height: auto !important;
 }
 body.overflow-hidden {
   /* prevent 2 vertical scrollbars on ie and firefox when the cart is visible */
