--- a/templates/page/layout.html.twig
+++ b/templates/page/layout.html.twig
@@ -46,13 +46,13 @@
 					  </ol>
 					  <div class="carousel-inner">
 						<div class="carousel-item active">
-						  <img class="d-block w-100 " src="img/174502.jpg"   alt="First slide">
+						  <img class="d-block w-100 " src="img/jumbo1.jpg"   alt="First slide">
 						</div>
 						<div class="carousel-item">
-						  <img class="d-block w-100" src="img/174502.jpg"  alt="Second slide">
+						  <img class="d-block w-100" src="img/jumbo2.jpg"  alt="Second slide">
 						</div>
 						<div class="carousel-item">
-						  <img class="d-block w-100" src="img/174502.jpg"  alt="Third slide">
+						  <img class="d-block w-100" src="img/jumbo3.jpg"  alt="Third slide">
 			  
 						</div>
 					  </div>
@@ -75,7 +75,7 @@
 <section>
 	<div class="container-fluid" style="padding-right: 0px; padding-left: 0px;">
 		<div class="jumbotron jumbotron-fluid"
-			style=" background-size: cover; background-repeat: no-repeat;height: 40em;margin-top: 0px">
+			style=" background-size: cover; background-repeat: no-repeat;height: 40em;margin-top: 0px;background-image: url(&quot;/img/jumbo1.jpg&quot;);background-position-y: -9em;">
 		</div>
 	</div>
 </section>
@@ -157,7 +157,7 @@
   			<div id="cd-shadow-layer" class="cd-shadow-layer"></div>
 
 			<div id="cd-cart">
-				<h2>Cart</h2>
+				<h2>Carrito</h2>
 				<ul class="cd-cart-items" id="cd-cart-items">
 				</ul> <!-- cd-cart-items -->
 
@@ -170,8 +170,8 @@
 
 			</div>
 					<p style="text-align:center;">No hay productos en el carrito </p>
-			<a href="#0" onclick="javascript:mostrar()" class="checkout-btn">Comprar</a>
-			<p class="cd-go-to-cart"><a href="#0">Ir al carrito</a></p>
+			<a href="/carrito" onclick="javascript:mostrar()" class="checkout-btn">Comprar</a>
+			<p class="cd-go-to-cart"><a href="/carrito">Ir al carrito</a></p>
 			
 			</div><!-- cd-cart -->
 
@@ -185,7 +185,7 @@
   			<div id="cd-shadow-layer" class="cd-shadow-layer"></div>
 
 			<div id="cd-cart">
-				<h2>Cart</h2>
+				<h2>Carrito</h2>
 				<ul class="cd-cart-items" id="cd-cart-items">
 				</ul> <!-- cd-cart-items -->
 
